--- a/dashboard/final_project.ipynb
+++ b/dashboard/final_project.ipynb
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "8ea9b85a-b4a0-45cb-adf2-88f21caca096",
    "metadata": {
     "tags": []
@@ -2469,15 +2469,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1) Asian</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>3) Other Minorities</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>2) White</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1) Asian</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2485,12 +2485,12 @@
       ],
       "text/plain": [
        "                RACETH\n",
-       "0             1) Asian\n",
-       "1  3) Other Minorities\n",
-       "2             2) White"
+       "0  3) Other Minorities\n",
+       "1             2) White\n",
+       "2             1) Asian"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2507,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "b9699580-0593-4160-b660-a6132cfd76e8",
    "metadata": {
     "tags": []
@@ -2556,7 +2556,7 @@
        "1    Male"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "11747938-a363-4bea-a02f-caf6770b7feb",
    "metadata": {
     "tags": []
@@ -3039,7 +3039,7 @@
        "52          75              1.305598    age       F01"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3062,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "e32f3dea-e64f-4d71-8f7d-028301e6ead0",
    "metadata": {
     "tags": []
@@ -3120,7 +3120,7 @@
        "1       Male              1.621001  gender       F02"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "eb609a31-9079-4020-8f72-b1d5ba237abd",
    "metadata": {
     "tags": []
@@ -3209,7 +3209,7 @@
        "2  3) Other Minorities              1.691075   race       F03"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3232,7 +3232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "599584a1-d52e-4879-98d0-ed4ea0f6e534",
    "metadata": {
     "tags": []
@@ -3306,7 +3306,7 @@
        "3  4) Professional              1.473230  education       F04"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3329,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "75e050a3-cc48-4690-9aee-004e3b6a32c6",
    "metadata": {
     "tags": []
@@ -3462,7 +3462,7 @@
        "[151 rows x 4 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3485,7 +3485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "3dbcf279-1e87-4ef5-9fe1-1ccb6ce7704d",
    "metadata": {
     "tags": []
@@ -3543,7 +3543,7 @@
        "1           3              1.604346  number of children       F06"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3566,7 +3566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "fef5097c-7424-4e35-833f-b131f7700f49",
    "metadata": {},
    "outputs": [],
@@ -3576,7 +3576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "df149b2e-2ac8-4ee7-88fe-1d6962345dc9",
    "metadata": {},
    "outputs": [],
@@ -3586,7 +3586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "f6641394-76e1-49fa-8a37-f84127a6b159",
    "metadata": {},
    "outputs": [],
@@ -3596,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "6b8467a5-8fc2-4630-8a75-0f8a743e23b6",
    "metadata": {},
    "outputs": [],
@@ -3606,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "78ad1c79-0dad-403f-8459-9af5bf17b980",
    "metadata": {},
    "outputs": [],
@@ -3616,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "da2226e9-79e9-49eb-ad42-d6faaa346a0b",
    "metadata": {},
    "outputs": [],
@@ -3626,7 +3626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "d06d02c6-7ab7-46ef-9f59-0f634727cad5",
    "metadata": {},
    "outputs": [],
@@ -3636,7 +3636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "e872f7c1-f97b-401a-908c-1589e65f41f8",
    "metadata": {},
    "outputs": [
@@ -3767,7 +3767,7 @@
        "[215 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3778,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "5d8a56e0-ee5d-46fc-bbac-89589b4c30dc",
    "metadata": {},
    "outputs": [
@@ -3792,7 +3792,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3885,7 +3885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "e7c48e70-82aa-406f-b5e2-6a6f5cda7664",
    "metadata": {},
    "outputs": [],
@@ -3904,7 +3904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "d71dffb1-3275-4a76-b727-645a78890ca4",
    "metadata": {},
    "outputs": [],
@@ -3923,7 +3923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "3dc72f81-e6f9-416e-a7d6-7eaca4fe9ebb",
    "metadata": {},
    "outputs": [],
@@ -3933,7 +3933,7 @@
     "[\n",
     "    html.H1(\"Job Satisfaction Dashboard\"),\n",
     "    \n",
-    "    dcc.Dropdown(id = 'factorselect', options = factorlist, value = 'F02'),\n",
+    "    dcc.Dropdown(id = 'factorselect', options = factorlist, value = 'F01'),\n",
     "    \n",
     "        html.Div(\n",
     "            [dcc.Graph(id = 'factorgraph')],\n",
@@ -3953,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "0a8982eb-4e7a-47f9-ae00-04abe7042dd8",
    "metadata": {},
    "outputs": [],
@@ -3985,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "c6ab97cc-b897-45a8-b3b5-14b9f8f31609",
    "metadata": {},
    "outputs": [
@@ -4011,7 +4011,7 @@
     "if __name__== \"__main__\":\n",
     "    app.run_server(mode= 'external', host = '0.0.0.0', debug=True)\n",
     "    \n",
-    "# and then update the address to http://127.0.0.1:8050/"
+    "# and then go to address http://127.0.0.1:8050/"
    ]
   },
   {
